overflow: scroll; fixes all reflow issues
At least the ones I could check on my iPad.

--- a/gerby/static/css/tag.css
+++ b/gerby/static/css/tag.css
@@ -25,6 +25,7 @@ ul.neighbours li.right a:after {
 }
 
 div.html {
+  overflow: scroll;
 }
 
 div.html h1 {
